# frame_panel

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/frame_panel/: frame_panel.hpp
src/: frame_panel.cpp
